Locations by nationalitys dropdown added and working. Need to fix css on dropdown menu (overflow property)

--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -12,6 +12,7 @@
 	ul{
 		list-style-type: none;
 	}
+	z-index:-1;
 }
 
 .foot-box{
